Fixed margin collapse, added additional pages.

--- a/style.css
+++ b/style.css
@@ -7,12 +7,16 @@ a {
     font-weight: lighter;
     text-decoration: none;
     text-shadow: 3px 1px 1px black;
-    color: white;
-    text-transform: lowercase;
+
 }
 
 a:hover {
-    color: forestgreen;
+    color: rgb(115, 145, 115);
+}
+
+a,
+li {
+    color: white;
 }
 
 a,
@@ -62,17 +66,30 @@ button {
 }
 
 .container {
-    margin: 0;
+    margin: auto;
+    
+}
+
+.container-contact {
+    margin: auto;
+    height: 80vh;
 }
 
 .div-content {
-    margin: 0;
+    margin: auto;
+}
+
+.div-content-contact {
+    margin-top: 50px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 fieldset {
     display: flex;
     align-content: center;
     margin: auto;
+    padding-bottom: 25px;
 }
 
 footer {
@@ -81,7 +98,7 @@ footer {
     text-align: center;
     background: rgb(78, 78, 78);
     padding: 4px;
-    height: 30px;
+    position: relative;
 }
 
 .form-div {
@@ -93,6 +110,7 @@ footer {
 }
 
 .front-img {
+    display: block;
     width: 100%;
     height: auto;
     opacity: .5;
@@ -100,7 +118,8 @@ footer {
 
 h1,
 h2,
-h3 {
+h3,
+label {
     font-family: 'Cinzel', serif;
     text-align: center;
 }
@@ -143,6 +162,7 @@ h3 {
     font-size: 20px;
 }
 
+
 header {
     width: 100%;
     height: 10%;
@@ -159,18 +179,39 @@ html {
     background: white;
     width: 100%;
     height: auto;
-
 }
 
+.input-field {
+    height: 35px;
+}
 
+.input-field,
+.text-box {
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+}
+
+label {
+    font-weight: bold;
+    text-align: center;
+    padding: 20px;
+
+}
 
 legend {
     text-align: center;
 }
 
-li {
+li,
+.li-contact {
     font-size: 20px;
     letter-spacing: 1px;
+}
+
+.li-contact {
+    color: black;
+    text-align: center;
 }
 
 .main-content {
@@ -198,6 +239,10 @@ p {
     text-align: justify;
 }
 
+.text-box {
+    height: 200px;
+}
+
 ul {
     display: flex;
     justify-content: space-around;
@@ -208,6 +253,15 @@ ul {
     padding: 5px;
 }
 
+.ul-contact {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    color: black;
+    background: none;
+}
+
 /*
 
 || Media Queries ||
@@ -216,8 +270,8 @@ ul {
 
 @media screen and (max-width: 799px) {
 
-    .front-img {
-        
+    h1 {
+        margin-top: 30px;
     }
 
 
@@ -234,6 +288,7 @@ ul {
         padding: 0;
     }
 
+
     .div-content {
         width: 60%;
         margin-top: 0;
@@ -241,10 +296,8 @@ ul {
 
     footer {
         text-align: center;
-        background: slategrey;
         margin: 0;
         padding: 10px;
-        height: 30px;
     }
 
     .form-div {
